cmake_minimum_required(VERSION 3.25)
project(C_HW C)
add_compile_options(-Wall -Wextra -pedantic -fsanitize=address)
add_link_options(-fsanitize=address)
add_library(csvConv src/CSVprettyPrinter/csvConverter.c)
add_library(tests src/CSVprettyPrinter/tests.c)
add_executable(CSVpp src/CSVprettyPrinter/csvPrettyPrinter.c)
target_link_libraries(tests PRIVATE csvConv)
target_link_libraries(CSVpp PRIVATE tests csvConv)